Fix drawer width, it was way too big.

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,10 @@ core-menu > paper-item {
   transition: all 300ms ease-in-out;
 }
 
+paper-item {
+  min-width: 0; /* The 7em default overflows otherwise. */
+}
+
 paper-item a {
   text-decoration: none;
   color: currentcolor;
